# experimaestro-cpp

./: .classpath  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  404.html  Architecture.txt  CMakeLists.txt  Doxyfile.in  README.md  TODO  build.gradle  doxy2swig.py  index.html  mkdocs.yml  pom.xml  project.properties  readme.md  requirements.txt  roadmap.md  settings.gradle  sitemap.xml  travis.sh  xpm.css  xpm.js
.circleci/: config.yml
app/: package-lock.json  package.json
app/sass/: App.scss  _jobs.scss
app/src/: App.css  App.js  Experiments.jsx  Tasks.jsx  client.js  index.js  sagas.js  setupProxy.js  store.js  theme.jsx
cmake/: FindFMT.cmake  FindPoco.cmake  FindSQLite3.cmake  FindYamlCPP.cmake  Findlibssh.cmake
cmake_pip/: cmake_extension.py  source_package_layout.py  version.py
cmake_pip/cmake/: FindCmakePIP.cmake
cpplib/: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile.in  MANIFEST.in  clienttest.cpp  config.ini  index.html  setup.cfg  setup.py
cpplib/asio/include/: asio.hpp
cpplib/cmake/: FindYamlCPP.cmake
cpplib/cmake_pip/: cmake_extension.py  source_utils.py
cpplib/cmake_pip/cmake/: external_project.cmake
cpplib/experimaestro/: main.cpp
cpplib/ext/SQLiteCpp/: .gitrepo
cpplib/ext/googletest/: .gitrepo
cpplib/ext/spdlog/: .gitrepo
cpplib/ext/tiny-process-library/: .gitrepo  CMakeLists.txt  process.cpp  process.hpp  process_unix.cpp  process_win.cpp
cpplib/googletest/: .gitrepo
cpplib/include/: Context.cpp  Context.h
cpplib/include/private/__xpm/: common.hpp  local.hpp  scriptbuilder.hpp
cpplib/include/private/xpm/: local.hpp
cpplib/include/public/xpm/: commandline.hpp  common.hpp  filesystem.hpp  launchers.hpp  register.hpp  utils.hpp  workspace.hpp  xpm.hpp
cpplib/include/xpm/: Client.hpp  JsonRPCClient.h  array.hpp  client.hpp  commandline.hpp  common.hpp  context.hpp  cpp.cpp  cpp.hpp  dependencies.hpp  experiments.hpp  filesystem.h  filesystem.hpp  launchers.hpp  logging.hpp  register.hpp  scheduler.hpp  task.hpp  utils.hpp  value.hpp  workspace.hpp  xpm.h  xpm.hpp
cpplib/include/xpm/rpc/: client.hpp  objects.hpp  optional.hpp  utils.hpp
cpplib/languages/java/: settings.gradle
cpplib/languages/java/src/main/java/net/bpiwowar/xpm/: Helper.java
cpplib/languages/java/src/main/java/net/bpiwowar/xpm/manager/tasks/: AbstractTask.java  JsonPath.java  Runner.java  TaskInputType.java
cpplib/languages/java/src/test/java/net/bpiwowar/xpm/test/: Simple.java
cpplib/spdlog/: .gitrepo
cpplib/src/: Client.cpp  JsonRPCClient.cpp  array.cpp  client.cpp  commandline.cpp  common.cpp  context.cpp  cpp.cpp  experimaestro.cpp  filesystem.cpp  jsonrpcclient.cpp  jsonserialization.cpp  launchers.cpp  local.cpp  private.cpp  private.hpp  register.cpp  scheduler.cpp  scriptbuilder.cpp  task.cpp  test.cpp  value.cpp  workspace.cpp  xpm.cpp  xpmssh.cpp  xpmssh.hpp
cpplib/src/rpc/: client.cpp  jsonrpcclient.cpp  notifications.cpp  objects.cpp  utils.cpp
cpplib/swig/: ignores.i  xpm.i  xpm.swig.py  xpm_rpc.i
cpplib/swig/java/: common.i  xpm.i
cpplib/swig/python/: __init__.py  xpm.i
cpplib/test/: CMakeLists.txt  arrays.cpp  cppdefinitions.cpp  digest.cpp  structuredvalues.cpp
cpplib/test/python/: task-a2.py  test.py
cpplib/websocketpp/: .gitrepo
cpplib/xpm/: Client.cpp  Client.h  JsonRPCClient.cpp  JsonRPCClient.h  xpm.cpp  xpm.h
cpplib/xpm/rpc/: objects.cpp  objects.hpp  utils.cpp  utils.hpp
developing/: index.html
docker/main/: Dockerfile  sources.list
docker/remote/: Dockerfile  run.sh  ssh_defaults
docs/: conf.py  developing.md  index.md  installing.md  jquery-ui.min.css  jquery-ui.theme.min.css  main concepts.md  requirements.txt  xpm.css
docs/lib/: mdx_xpm.py
docs/manager/: definitions.md  index.md  intro.md  javascript.md  javatask.md  json.md  plans.md  python.md  pythontask.md  tasks.md
docs/mdx/: mdx_xpm.py  setup.py
docs/scheduler/: connectors.md  index.md  locks.md  notification.md  xmlrpc.md
experimaestro/: main.cpp
ext/SQLiteCpp/: FindSQLiteCpp.cmake
ext/efsw/: .gitrepo  CMakeLists.txt
ext/fmtlib/: .gitrepo
ext/googletest/: .gitrepo
ext/spdlog/: .gitrepo
ext/websocketpp/: .gitrepo
ext/yaml-cpp/: .gitrepo  CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
helper/: build.gradle  pom.xml
installing/: index.html
languages/java/: build.gradle
languages/python/: CMakeLists.txt  __init__.py  common.i  xpm.i
languages/python/test/: helloworld.py
languages/swig/: xpm.i
main concepts/: index.html
manager/definitions/: index.html
manager/intro/: index.html
manager/java/: index.html
manager/json/: index.html
manager/python/: index.html
scheduler/: index.html
scheduler/connectors/: index.html
scheduler/notification/: index.html
scripts/: add-job.py  echo.py  experimaestro  run-script.py  stop.py  xpm.py
search/: search_index.json
server/: README.md  TODO  build.gradle  package.json  pom.xml  settings.gradle
server/doc/: index.md
server/jsch-extension/: .gitrepo  build.gradle  settings.gradle
server/jsch-nio/: .gitrepo  build.gradle  pom.xml  settings.gradle
server/scripts/: daemonlib.py  experimaestro  requirements.txt
src/: api.cpp  commandline.cpp  common.cpp  context.cpp  cpp.cpp  filesystem.cpp  launchers.cpp  local.cpp  local_unix.cpp  private.cpp  register.cpp  scalar.cpp  scriptbuilder.cpp  task.cpp  type.cpp  value.cpp  workspace.cpp  xpm.cpp  xpmssh.cpp
src/assemble/: bin.xml
src/connectors/: connectors.cpp  local.cpp  local_unix.cpp  ssh.cpp
src/launchers/: launchers.cpp  oar.cpp
swig/: xpm.i  xpm_rpc.i
test/: CMakeLists.txt  config.h.in  cppdefinitions.cpp  digest.cpp  experiment.cpp  parameters-tests.cpp  process-tests.cpp  scheduler-tests.cpp  ssh-tests.cpp  structuredvalues.cpp  tests.cpp  value-tests.cpp
test/docker/: Dockerfile  docker-compose.yml  id_rsa  oar.hosts  run.sh  start-oar-node.sh
test/docker/main/: Dockerfile
test/docker/userdir/: .bash_history
test/docker/userdir/.ssh/: id_rsa.pub
test/python/: helloworld.py  task-a2.py  test.py
test/scripts/: exitscript  waitfile
(+1717 files in other folders)
